# bauhaus

./: .editorconfig  .gitignore  .mise.toml  Dockerfile  README.md  justfile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml  generate-self-hosted.yml  generate.yml  generation-benchmark.yml  sign-metadata.yml
docs/research/: aesthetic-feedback-loop.md  decoder-fine-tuning.md  fine-tune-decoder.md  style-transfer-architectures.md
models/: download_models.py  download_models.sh
scripts/: sign-image-metadata.sh
src/: benchmark_gate.py  fetch.py  main.py  postprocess.py  quality.py  sign_metadata.py  stylize.py  upload.py  variants.py
styles/: download_styles.sh  styles.json
tests/: conftest.py  test_benchmark_gate.py  test_fetch.py  test_main.py  test_postprocess.py  test_progressive.py  test_quality.py  test_sign_metadata.py  test_stylize.py  test_upload.py  test_variants.py
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
worker/test/: index.test.ts  unit-helpers.test.ts
