[project]
name = "bauhaus"
version = "0.1.0"
description = "Daily stylized art service — AdaIN style transfer on Unsplash and public domain museum artwork"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.0,<3.0",
    "torchvision>=0.15,<1.0",
    "pillow>=12.1.1,<13.0",
    "boto3>=1.28,<2.0",
    "requests>=2.31,<3.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
