[project]
name = "bauhaus"
version = "0.1.0"
description = "Daily stylized art service — AdaIN style transfer on Unsplash and public domain museum artwork"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12.1,<3.0",
    "torchvision>=0.28.0,<1.0",
    "pillow>=12.3.0,<13.0",
    "boto3>=1.43.46,<2.0",
    "requests>=2.34.2,<3.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
